# defensive

./: .gitignore  README.md
client/: CMakeLists.txt  README.md
client/libs/xmlrpc-c-1.51.06/: config.mk  config.status  shell_config  srcdir.mk  version.h  xmlrpc-c-config  xmlrpc-c-config.test  xmlrpc_config.h
client/libs/xmlrpc-c-1.51.06/include/xmlrpc-c/: base.h
client/libs/xmlrpc-c-1.51.06/lib/abyss++/: AbyssChanSwitch.osh  AbyssServer.osh  libxmlrpc_abyss++.8.51.dylib  xmlrpc_abyss++.pc
client/libs/xmlrpc-c-1.51.06/lib/curl_transport/: curltransaction.osh
client/libs/xmlrpc-c-1.51.06/lib/expat/: xmlrpc_expat.pc
client/libs/xmlrpc-c-1.51.06/lib/libutil/: asprintf.osh  base64.osh  error.osh  libxmlrpc_util.4.51.dylib  lock_pthread.osh  mempool.osh  select.osh  sleep.osh  string_number.osh  utf8.osh  xmlrpc_util.pc
client/libs/xmlrpc-c-1.51.06/lib/libutil++/: Lock.osh  girerr.osh  libxmlrpc_util++.8.51.dylib  xmlrpc_util++.pc
client/libs/xmlrpc-c-1.51.06/src/: abyss_handler.osh  json.osh  libxmlrpc.dylib  libxmlrpc_client.dylib  libxmlrpc_server.3.51.dylib  libxmlrpc_server_abyss.3.51.dylib  libxmlrpc_server_cgi.3.51.dylib  method.osh  parse_value.osh  resource.osh  xmlrpc.pc  xmlrpc_client.osh  xmlrpc_client.pc  xmlrpc_datetime.osh  xmlrpc_expat.osh  xmlrpc_parse.osh  xmlrpc_server.pc  xmlrpc_server_abyss.osh  xmlrpc_server_abyss.pc  xmlrpc_server_cgi.pc
client/libs/xmlrpc-c-1.51.06/src/cpp/: abyss_reqhandler_xmlrpc.osh  fault.osh  libxmlrpc++.8.51.dylib  libxmlrpc_client++.dylib  libxmlrpc_cpp.8.51.dylib  xml.osh  (+16 more)
client/src/: c-client.cpp  main.cpp
(+44 files in other folders)
